Fixed Calendar cropping wrongfully on mobile devices, and partially fixed timerange being not wide enough.

--- a/app/pages/search/controls/_search-controls.scss
+++ b/app/pages/search/controls/_search-controls.scss
@@ -267,7 +267,7 @@
     color: $black;
     background-color: $light-gray;
     border-radius: 0;
-    font-size: 1.6rem;
+    font-size: 1em;
 
     &--available:not(.DayPicker-Day--disabled) {
       background-color: $light-gray;
@@ -311,15 +311,15 @@
 
   .DayPicker-Weekday {
     color: $black;
+    padding: 0;
   }
 
   .DayPicker-WeekNumber {
-    font-size: 14px;
+    font-size: 1em;
   }
 }
 
 .app-TimeRangeControl {
-  max-width: 400px;
 
   @media (min-width: $screen-sm-min) {
     margin: 0 auto;
